<resources>
    <!-- General -->
    <string name="app_name">Melon Music Player</string>

    <!-- Toolbar Actions -->
    <string name="connect_action_title">Connect</string>
    <string name="refresh_songlist_title">Refresh song list</string>
    <string name="action_settings_title">Settings</string>

    <!-- Settings Fragment -->
    <string name="settings_activity_title">Settings</string>

    <!-- Splash Activity -->
    <string name="splash_screen_logo_desc">Splash screen logo</string>
    <string name="splash_screen_title">MMP</string>
    <string name="btn_connect_title">Connect</string>
    <string name="default_ip">192.168.1.40</string>
    <string name="lbl_et_youtube_url">Youtube URL:</string>
    <string name="btn_youtube_download">Download</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="next_song">Next Song</string>
    <string name="pause_resume_music">Pause/Resume Music</string>
    <string name="previous_song">Previous Song</string>
    <string name="title_activity_remove_this">RemoveThisActivity</string>
    <string name="volume">Volume</string>
    <string name="queue">Queue</string>
    <string name="new_name">New name:</string>
    <string name="hint_youtube_url">Youtube URL</string>
    <string name="new_album_location">New album location:</string>
    <string name="time_placeholder">0:00</string>
    <string name="app_logo">App Logo</string>
    <string name="melon">Melon</string>
    <string name="enter_musicplayer_ip">MusicPlayer IP</string>
    <string name="album_cover">Album Cover</string>
    <string name="albums">Albums</string>
    <string name="new_download">New Download</string>
    <string name="download">Download</string>
    <string name="change_volume">Change Volume</string>
    <string name="duration_default_text">00:00:00</string>
    <string name="song_options">Song Options</string>
    <string name="rename">Rename</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="move">Move</string>
    <string name="undefined">Undefined</string>
</resources>
