<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:layout_alignParentBottom="true"
    android:layout_alignParentStart="true"
    android:id="@+id/linearLayout"
    android:paddingLeft="10dp"
    android:paddingTop="5dp"
    android:paddingRight="10dp"
    android:paddingBottom="5dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvCurrentSong"
        android:textColor="#f5f5f5"
        android:layout_gravity="start"
        android:visibility="gone" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sbMusicTime"
        android:max="100"
        android:minHeight="10dp"
        android:maxHeight="10dp"
        android:progressDrawable="@drawable/apptheme_scrubber_progress_horizontal_holo_dark"
        android:thumb="@drawable/apptheme_scrubber_secondary_holo"
        android:progress="0"
        android:indeterminate="false" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_placeholder"
            android:id="@+id/tvSongCurPos"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_placeholder"
            android:layout_gravity="end"
            android:id="@+id/tvSongDuration"
            android:layout_weight="1"
            android:textColor="#ffffff"
            android:gravity="end" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageButton
            android:src="@null"
            android:background="@null"
            android:clickable="false"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/queue" />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@null"
            android:id="@+id/btnPreviousSong"
            android:src="@drawable/ic_skip_previous"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/previous_song" />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@null"
            android:id="@+id/btnPlayPause"
            android:src="@drawable/ic_action_playback_play_white"
            android:contentDescription="@string/pause_resume_music" />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@null"
            android:id="@+id/btnNextSong"
            android:src="@drawable/ic_skip_next"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/next_song" />


        <ImageButton
            android:id="@+id/btnChangeVolume"
            android:src="@drawable/ic_volume_up"
            android:layout_marginStart="20dp"
            android:background="@null"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/volume"
            />

    </LinearLayout>

</LinearLayout>